--- a/arch/arm/configs/msm8610-nokia_defconfig
+++ b/arch/arm/configs/msm8610-nokia_defconfig
@@ -395,7 +395,7 @@ CONFIG_LOGCAT_SIZE=64
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_PRONTO_WLAN=m
+CONFIG_PRONTO_WLAN=y
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
