defconfig: disable module ,enable CONFIG_UID_CPUTIME

--- a/arch/arm/configs/msm8610-nokia_defconfig
+++ b/arch/arm/configs/msm8610-nokia_defconfig
@@ -30,7 +30,7 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
 CONFIG_OPROFILE=m
-CONFIG_MODULES=y
+CONFIG_MODULES=n
 CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_FORCE_UNLOAD=y
 CONFIG_MODVERSIONS=y
@@ -444,3 +444,4 @@ CONFIG_CRYPTO_TWOFISH=y
 CONFIG_CRYPTO_DEV_QCRYPTO=m
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=m
+CONFIG_UID_CPUTIME=y
